map loads according to the city the uses picks, still having issues with the css binding and app visibility

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,7 @@ span {
 	padding: 20px;
 	margin-bottom: 100px;
 }
+
+.disabled {
+	visibility: hidden;
+}
